#FEAT: images optimize

--- a/src/components/landing/LastProject.astro
+++ b/src/components/landing/LastProject.astro
@@ -1,6 +1,6 @@
 ---
 import { ReactIcon, RightArrow } from "../../assets/icons/Icons";
-import simpleCalendar from "../../assets/imgs/simple-calendar.png"
+import simpleCalendar from "../../assets/imgs/simple-calendar.webp"
 import Anchor from "../Anchor.astro";
 import LinkButton from "../LinkButton.astro";
 ---
