--- a/src/components/landing/Presentation.astro
+++ b/src/components/landing/Presentation.astro
@@ -1,6 +1,6 @@
 ---
 import { GithubIcon, GmailIcon } from "../../assets/icons/Icons";
-import profile from "../../assets/imgs/profile.png"
+import profile from "../../assets/imgs/profile.webp"
 ---
 
 <style>
